frontend/test/should_pass/induced_003.grg
rule r {
	induced pattern {
		x: Node -:Edge-> x;
	}
	replace {
	}
}

