frontend/test/should_fail/rhslhs.grg
rule r
{
	n-->n;
	
	modify {
		n:Node;
	}
}
